fix(a11y): contrast ratio

--- a/src/styles/carbon.scss
+++ b/src/styles/carbon.scss
@@ -28,7 +28,7 @@
     margin-left: 140px;
   }
   .carbon-poweredby {
-    opacity: 0.8;
+    opacity: 0.85;
     font-size: 12px;
     margin-top: 10px;
     margin-left: 140px;
